--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ECE1778">
-        <activity android:name=".FullScreenPost"></activity>
+        <activity android:name=".Caption"></activity>
+        <activity android:name=".FullScreenPost" />
         <activity android:name=".Profile" />
         <activity android:name=".SignUp" />
         <activity android:name=".MainActivity">
