--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".CurrentPost"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".CurrentPost"
         android:theme="@style/Theme.ECE1778">
+        <activity android:name=".GlobalActivity"></activity>
         <activity android:name=".Caption" />
         <activity android:name=".CommentActivity" />
         <activity android:name=".ProfileActivity" />
