--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ECE1778">
-        <activity android:name=".GlobalActivity"></activity>
+        <activity android:name=".BottomNavigationActivity"></activity>
         <activity android:name=".Caption" />
         <activity android:name=".CommentActivity" />
-        <activity android:name=".ProfileActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
