--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ECE1778">
-        <activity android:name=".BottomNavigationActivity"></activity>
+        <activity android:name=".BottomNavigationActivity" />
         <activity android:name=".Caption" />
         <activity android:name=".CommentActivity" />
         <activity android:name=".SignUpActivity" />
@@ -40,6 +40,10 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
+        <meta-data
+            android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+            android:value="label" />
     </application>
 
 </manifest>
